@@ -1,3 +1,7 @@
+2004-08-30  Dom Lachowicz <cinamod@hotmail.com>
+
+	* test-display.c: Ability to copy the current SVG's URI or file path
+	
 2004-08-28  Dom Lachowicz <cinamod@hotmail.com>
 
 	* rsvg-css.c: Something closer to correct for ex-height
